--- a/Task-1/index.html
+++ b/Task-1/index.html
@@ -18,8 +18,12 @@
             <h2 class="container__text--h2">HANDCRAFTED AND RESPONSIBLY SOURCED</h2>
             <p class="container__text--p">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. </p>
           </div>
+          <div class="container__text--state-hidden">
+            <h2 class="container__text--h2">HANDCRAFTED AND RESPONSIBLY SOURCED</h2>
+            <p class="container__text--p">On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. </p>
+          </div>
           <div class="container__button">
-            <button class="button button__more">
+            <button class="button button__more button__js">
               <p class="button__text">Learn more</p>
             </button>
           </div>
