hidden frame added

--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css">
     <title>Vite App</title>
   </head>
   <body>
     <section class="section">
       <div class="container__text">
+        <div class="frame frame--hidden">
+          <img src="images\Слой 2.svg" alt=""><p>Nutrition</p><img src="images\Слой 2.svg" alt="">
+        </div>
         <h1 class="container__text-h1">OUR RECIPES</h1>
         <p class="container__text-p">Great on its own or as a mixer. Fun cocktail & mocktail recipes to try.</p>
         <button class="button__view-all-recipes">View all recipes</button>
