title and button edit

--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -15,7 +15,7 @@
         </div>
         <h1 class="container__text-h1">OUR RECIPES</h1>
         <p class="container__text-p">Great on its own or as a mixer. Fun cocktail & mocktail recipes to try.</p>
-        <button class="button__view-all-recipes">View all recipes</button>
+        <button class="button__view-all-recipes">VIEW ALL RECIPES</button>
       </div>
       <div class="container__content">
         <div class="content">
