--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -15,21 +15,24 @@
         </div>
         <h1 class="container__text-h1">OUR RECIPES</h1>
         <p class="container__text-p">Great on its own or as a mixer. Fun cocktail & mocktail recipes to try.</p>
-        <button class="button__view-all-recipes">VIEW ALL RECIPES</button>
+        <button class="button__view-all-recipes"><h3 class="view-all-recipes__h3">VIEW ALL RECIPES</h3></button>
       </div>
       <div class="container__content">
         <div class="content">
           <div class="content__image-div">
             <img src="images\image 5.svg" alt="" class="front-image">
-            <img src="images\image 33.svg" alt="" class="background-image">
-            <h2 class="cocktail-name"></h2>
+            <img src="images\image 33.svg" alt="" class="background-image-topleft">
+            <div class="image-div__text">
+              <p class="cocktail-name">Sparkling Triple Citrus & Mint Mocktail</p>
+            </div>
           </div>
         </div>
         <div class="content">
           <div class="content__image-div">
-            <img src="" alt="" class="front-image">
-            <img src="" alt="" class="background-image">
-            <h2 class="cocktail-name"></h2>
+            <img src="images\image 6.svg" alt="" class="front-image">
+            <img src="images\image 35.svg" alt="" class="background-image-topright">
+            <img src="images\image 36.svg" alt="" class="background-image-bottomleft">
+            <h2 class="cocktail-name">MangoSparkling Triple Citrus & Mint Mocktail bullet</h2>
           </div>
         </div>
         <div class="content">
