top left position update

--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -20,10 +20,17 @@
       <div class="container__content">
         <div class="content">
           <div class="content__image-div">
-            <img src="images\image 5.svg" alt="" class="front-image">
-            <img src="images\image 33.svg" alt="" class="background-image-topleft">
+            <div class="front-image-div">
+              <div class="front-image-div__top-left-corner">
+                
+                <div class="background-image-div">
+                  <!-- <img src="images\30a9edcdefcf961a7007b00f86cb431c286b8059.png" alt="" class="background-image-topleft"> -->
+                </div>
+              </div>
+              <img src="images\image 5.svg" alt="" class="front-image">
+            </div>
             <div class="image-div__text">
-              <p class="cocktail-name">Sparkling Triple Citrus & Mint Mocktail</p>
+              <h2 class="cocktail-name">Sparkling Triple Citrus & Mint Mocktail</h2>
             </div>
           </div>
         </div>
