--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -24,7 +24,7 @@
               <div class="front-image-div__top-left-corner">
                 
                 <div class="background-image-div">
-                  <!-- <img src="images\30a9edcdefcf961a7007b00f86cb431c286b8059.png" alt="" class="background-image-topleft"> -->
+                  <img src="images\30a9edcdefcf961a7007b00f86cb431c286b8059.png" alt="" class="background-image-topleft">
                 </div>
               </div>
               <img src="images\image 5.svg" alt="" class="front-image">
@@ -37,8 +37,8 @@
         <div class="content">
           <div class="content__image-div">
             <img src="images\image 6.svg" alt="" class="front-image">
-            <img src="images\image 35.svg" alt="" class="background-image-topright">
-            <img src="images\image 36.svg" alt="" class="background-image-bottomleft">
+            <!-- <img src="images\image 35.svg" alt="" class="background-image-topright">
+            <img src="images\image 36.svg" alt="" class="background-image-bottomleft"> -->
             <h2 class="cocktail-name">MangoSparkling Triple Citrus & Mint Mocktail bullet</h2>
           </div>
         </div>
